Made the api key private

--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/java,linux,macos,windows,android,intellij,androidstudio
+app/src/main/res/values/api_keys.xml
